<resources>
    <string name="app_name">Recetas</string>
    <string name="txtEmail">Email</string>
    <string name="txtContraseña">Contraseña</string>
    <string name="btnEntrar">Entrar</string>
    <string name="btnRegistro">Registrarse</string>
    <string name="btnEntrarSinRegistro">Continuar sin registrarse</string>
    <string name="lblRecetasBasicas">Recetas Básicas</string>
    <string name="lblTortilla">Tortilla de Patatas</string>
    <string name="lblDesTortilla">Rica tortilla española de la manera más fácil.</string>
    <string name="lblCrema">Crema de Puerro</string>
    <string name="lblDesCrema">Crema sana y deliciosa elaborada con puerros, cebolla y patata.</string>
    <string name="lblDesLargaTortilla">Para 1 o 2 personas necesitaremos los siguientes ingredientes:</string>
    <string name="btnRecetaGuiada">Comenzar Receta Guiada</string>
    <string name="lblTortilla1">Pelamos las patatas y las cortamos en forma panadera como en la imagen</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="lblTortilla2">Cortamos la cebolla a taquitos pequeños como en la imagen</string>
    <string name="lblTortilla3">Echamos bastante aceite en una sartén y freímos las patatas junto a la cebolla. Si lo prefieres, puedes hacerlo como yo y \"freírlas\" en una olla express, en la que añades el aceite, las patatas y la cebolla de la misma forma, tapas la olla y cuando empieze a pitar lo mantienes 5min y lo retiras del fuego. Mientras se fríen las patatas batimos los huevos. Si queremos añadir algo más a la tortilla es el momento, en mi caso siempre le añado queso, por lo que añadiría el queso (de tranchete) en trozos en el huevo batido.</string>
    <string name="lblTortilla4">!No olvides añadir sal al gusto a las patatas mientras se fríen! Cuando estén fritas las sacamos con una espumadera y las añadimos al huevo batido mezclándolo todo bien. Una vez hecho esto, llega el gran momento.</string>
    <string name="lblTortilla5">Añadimos en una sartén antiadherente un par de cucharadas de aceite y dejamos que se caliente la sartén un poco, cuando veamos que está el aceite caliente añadimos la mezcla de patatas, cebolla, huevos e ingredientes varios.</string>
    <string name="lblTrucos">TRUCOS</string>
    <string name="lblTortillaTrucos">Cuanto más alto esté el fuego, más deshecha saldrá la tortilla y menos tardará en hacerse, ya que se hará el exterior de la tortilla muy rápido y el interior quedará crudo. Por el contrario, cuanto más bajo esté el fuego, más hecha saldrá la tortilla, no es necesario que esté el fuego al mínimo, con que esté a fuego medio la tortilla se hará por completo, el cuándo darle la vuelta a la tortilla depende de la fuerza del fuego. Además, te recomiendo que uses un fuego de diámetro mayor que el de la sartén, para que de esta manera se hagan los lados de la tortilla igual que el centro.</string>
    <string name="lblTortilla6">Cuando veamos que está cuajándose la tortilla por debajo llega el gran momento de darle la vuelta, para esto no se necesita ningún truco, solamente decisión y seguridad, colocamos un plato encima de la sartén y con decisión le damos la vuelta y la volcamos poco a poco de nuevo en la sartén para ponerla de nuevo al fuego.</string>
    <string name="lblTortilla7">Finalmente, le damos un par de vueltas más y cuando veamos que la tortilla está a nuestro gusto la retiramos del fuego y ya podemos disfrutar de ella!!</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtRepContraseña">Repetir Contraseña</string>
    <string name="lblSal">Sal</string>
    <string name="lblAceite">Aceite</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="lblIngrCPuerro1">2 Puerros</string>
    <string name="lblIngrCPuerro2">1 Patata mediana</string>
    <string name="lblIngrCPuerro3">1 Cebolla pequeña</string>
    <string name="lblDesLargaCPuerro">Para 2 personas necesitaremos los siguientes ingredientes:</string>
    <string name="lblIngrTortilla1">2 Patatas medianas</string>
    <string name="lblIngrTortilla2">3 Huevos</string>
    <string name="lblIngrTortilla3">1 Cebolla pequeña</string>
    <string name="lblCPuerro1">Cortamos en trozos los puerros, la patata pelada y la cebolla.</string>
    <string name="lblCPuerro2">Añadimos aceite a una olla express, junto con las verduras y sal. Lo sofreímos todo durante unos 10min.</string>
    <string name="lblCPuerro3">Añadimos agua a la olla y la cerramos, cuando empiece a pitar la dejamos 20min y luego la retiramos del fuego.</string>
    <string name="lblCPuerro4">Finalmente, escurrimos las verduras y las trituramos, añadiendo el caldo que creamos conveniente. El caldo sobrante se puede guardar también para hacer una rica sopa.</string>
    <string name="lblHamburguesaNormal">Hamburguesa Normal</string>
    <string name="lblDesHamburNormal">¿Qué hay más rico que una hamburguesa casera para cenar?</string>
    <string name="lblArrozCubana">Arroz a la Cubana</string>
    <string name="lblDesArrozCubana">Arroz cocido con tomate frito y acompañado por un huevo frito</string>
    <string name="lblEnsaladaArroz">Ensalada de Arroz</string>
    <string name="lblEnsaladaPasta">Ensalada de Pasta</string>
    <string name="lblPastaBolo">Pasta a la Boloñesa</string>
    <string name="lblPastaCarb">Pasta a la Carbonara</string>
    <string name="lblDesEnsaladaArroz">Arroz cocido como base principal de una ensalada diferente</string>
    <string name="lblDesEnsaladaPasta">Rica ensalada con una base de pasta</string>
    <string name="lblDesPastaBolo">Pasta al más estilo italiano con salsa boloñesa</string>
    <string name="lblDesPastaCarb">Pasta con algo diferente al tomate frito, rica pasta con salsa carbonara</string>
    <string name="lblFajitas">Fajitas de Pollo</string>
    <string name="lblPolloChilind">Pollo al Chilindrón</string>
    <string name="lblPolloHorno">Pollo al Horno</string>
    <string name="lblPolloPlancha">Pechuga de Pollo a la Plancha</string>
    <string name="lblHQueso">Hamburguesa con Queso</string>
    <string name="lblHQuesoBacon">Hamburguesa con Queso y Bacon</string>
    <string name="lblHCocidos">Huevos Cocidos</string>
    <string name="lblHEscalfados">Huevos Escalfados</string>
    <string name="lblHFritos">Huevos Fritos</string>
    <string name="lblTFrancesa">Tortilla Francesa</string>
    <string name="lblBoqueronesFritos">Boquerones Fritos</string>
    <string name="lblDoradaEsp">Dorada a la Espalda</string>
    <string name="lblDoradaPapi"> Dorada al Papillote </string>
    <string name="lblEmperadorPl">Emperador a la Plancha</string>
    <string name="lblEnsCampera">Ensalada Campera</string>
    <string name="lblEnsRusa">Ensaladilla Rusa</string>
    <string name="lblPPatata">Puré de Patata</string>
    <string name="lblPVerduras"> Puré de Verduras </string>
    <string name="lblDesFajitas">Ricas fajitas rellenas de pollo, pimiento y cebolla al más puro estilo Mexicano</string>
    <string name="lblDesPolloChilind">Rico pollo en salsa chilindrón, compuesta principalmente por pimiento</string>
    <string name="lblDesPolloHorno">Pollo asado al horno con la receta que aprendí de mi abuela</string>
    <string name="lblDesPolloPlancha">Rica y sana pechuga de pollo a la plancha</string>
    <string name="lblDesHQueso">Dejomos de pedir comida rápida y hagámosla nosotros mismos</string>
    <string name="lblDesHQuesoBacon">Ahora añadámosle rico bacon frito (bacon bacon frito)</string>
    <string name="lblDesHCocidos">Ricos huevos cocidos válidos para miles de recetas</string>
    <string name="lblDesHEscalfados">Ahorrémonos unas cuantas calorías escalfando los huevos en vez de freírlos</string>
    <string name="lblDesHFritos">Clasica receta, sencilla y deliciosa</string>
    <string name="lblDesTFrancesa">Básica receta de dietas, pero rica y fácil de realizar</string>
    <string name="lblDesBoqueronesFritos">Rico para un segundo plato o para una tapa mientras nos tomamos un refresco</string>
    <string name="lblDesDoradaEsp">Rica receta sencilla de realizar</string>
    <string name="lblDesDoradaPapi">Casi cualquier pescado se puede cocinar al papillote, pero la dorada es mi favorita</string>
    <string name="lblDesEmperadorPl">Delicioso pescado a la plancha y muy sencillo de realizar</string>
    <string name="lblDesEnsCampera">Rica ensalada con base de patata cocida</string>
    <string name="lblDesEnsRusa">No sé si será rusa, pero lo que sí sé es que está deliciosa y es muy fácil de hacer</string>
    <string name="lblDesPPatata">Rico puré de a base de patata y nada más</string>
    <string name="lblDesPVerduras">Sano y delicioso puré a base de muchas verduras</string>
    <string name="lblDesIngr">Para 1 persona necesitaremos:</string>
    <string name="lblIngrPechPollo">2 filetes de pechuga de pollo</string>
    <string name="lblPolloPlanchaG">En una sartén añadimos unas gotas de aceite, a parte a los filetes les echamos sal, los ponemos en la sartén a fuego medio, cuando estén blanquecinos por la parte inferior les damos la vuelta, repetimos esto hasta que veamos que están a nuestro gusto</string>
    <string name="lblArrozCubanaDes">Los ingredientes para 1 persona son:</string>
    <string name="lblArrozCubanaIngr1">100gr Arroz</string>
    <string name="lblArrozCubanaIngr2">Tomate frito</string>
    <string name="lblArrozCubanaIngr3">1 huevo</string>
    <string name="lblArrozCubanaG1">Echamos agua y un poco de sal en un cazo y lo ponemos al fuego fuerte hasta que hierva, cuando esto ocurra añadimos el arroz y bajamos a fuego medio.</string>
    <string name="lblArrozCubanaG2">Cocemos el arroz durante 20min, dándole vueltas de vez en cuando. Aparte echamos abundante aceite en una sartén antiadherente y la ponemos fuego fuerte</string>
    <string name="lblArrozCubanaG3">Cuando el aceite esté caliente bajamos y el fuego y ponemos un huevo a freir.</string>
    <string name="lblArrozCubanaG4">Cuando el arroz esté cocido lo podemos meter en un vaso (presionando un poco) y le damos la vuelta en un plato para que parezca una montañita, apartamos el huevo al lado y le añadimos tomate frito. ¡A comer!</string>
    <string name="lblHNormalDes">Los ingredientes para 1 persona son:</string>
    <string name="lblHNormalIngr1">1 Carne de Hamburguesa</string>
    <string name="lblHNormalIngr2">1 Pan de Hamburguesa</string>
    <string name="lblHNormalIngr3">1 Tomate mediano</string>
    <string name="lblHNormalIngr4">1 Hoja de lechuga</string>
    <string name="lblHNormalIngr5">1/4 Cebolla mediana</string>
    <string name="lblHNormalG1">Ponemos la carne de hamburguesa en una sartén a fuego medio.</string>
    <string name="lblHNormalG2">Mientras se hace la carne cortamos el tomate en rodajas, la lechuga en trozos (yo uso lechuga iceberg porque tarda más en ponerse mala) y la cebolla en juliana (como en la imagen).</string>
    <string name="lblHNormalG3">Colocamos los trozos de lechuga, las rodajas de tomate y la carne de la hamburguesa ya hecha sobre el pan inferior de la hamburguesa. En la misma sartén echamos la cebolla para hacerla un poco (esto es opcional, si preferimos la cebolla cruda solo hay que añadirla al pan)</string>
    <string name="lblHNormalG4">Finalmente añadimos la cebolla ya hecha encima de la carne de hamburguesa y la cerramos con el pan superior. ¡A comer!</string>
    <string name="lblHCocidosPag">Ingredientes para 1 persona:</string>
    <string name="lblHCocidosIngr1">1 Huevo</string>
    <string name="lblAgua">Agua</string>
    <string name="lblHCocidosG1">Echamos agua en un cazo y lo ponemos a fuego fuerte hasta que empiece a hervir. Una ver hierva añadimos el huevo al agua.</string>
    <string name="lblHCocidosG2">Pasados 10min retiramos el huevo del agua y lo dejamos enfriar. Cuando este esté frío, lo pelamos y ya podemos disfrutar de él. Esta receta sirve para otras muchas.</string>
</resources>