<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HamburguesaNormal">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059"
        app:srcCompat="@drawable/logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHNormalPag"
        android:layout_width="0dp"
        android:layout_height="510dp"
        android:background="@drawable/layout_rounder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/lblHamburguesaNormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblHamburguesaNormal"
            android:textColor="#000"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/caviardreams"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.033" />

        <ImageView
            android:id="@+id/imgHNormal"
            android:layout_width="195dp"
            android:layout_height="149dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblHamburguesaNormal"
            app:layout_constraintVertical_bias="0.057"
            app:srcCompat="@drawable/hamburguesa" />

        <TextView
            android:id="@+id/lblHNormalDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caviardreams"
            android:text="@string/lblHNormalDes"
            android:textColor="#000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgHNormal"
            app:layout_constraintVertical_bias="0.041" />

        <TextView
            android:id="@+id/lblHNormalIngr1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblHNormalIngr1"
            android:fontFamily="@font/caviardreams"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.159"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblHNormalDes"
            app:layout_constraintVertical_bias="0.063" />

        <TextView
            android:id="@+id/lblHNormalIngr2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblHNormalIngr2"
            android:fontFamily="@font/caviardreams"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblHNormalIngr1"
            app:layout_constraintVertical_bias="0.055" />

        <TextView
            android:id="@+id/lblHNormalIngr3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caviardreams"
            android:text="@string/lblHNormalIngr3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.128"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblHNormalIngr2"
            app:layout_constraintVertical_bias="0.053" />

        <TextView
            android:id="@+id/lblHNormalIngr4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblHNormalIngr4"
            android:fontFamily="@font/caviardreams"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.129"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblHNormalIngr3"
            app:layout_constraintVertical_bias="0.065" />

        <TextView
            android:id="@+id/lblHNormalIngr5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblHNormalIngr5"
            android:fontFamily="@font/caviardreams"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.139"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblHNormalIngr4"
            app:layout_constraintVertical_bias="0.1" />

        <Button
            android:id="@+id/btnRecetaGuiada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/button_rounded"
            android:text="@string/btnRecetaGuiada"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:onClick="oyente_guiadaHNormal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgHNormal"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>